--- a/style.css
+++ b/style.css
@@ -68,6 +68,7 @@
     
 }
 .container{
+    display: flex;
     width: 100%;
     justify-content: center;
     align-items: center;
@@ -78,16 +79,17 @@
     
 }
 .database{
-    display: inline;
+    display: ;
     color: white;
     margin-left: 10px;
     margin-right: 10px;
     justify-content: center;
     align-items: center;
     color: #010165;
-    height: 80px;   
+    height: 120px;   
     background-color: #00ffff;
     border: 10px;
+    max-width: 80px;
     
     
 }
